--- a/manifest.jenkins.yml
+++ b/manifest.jenkins.yml
@@ -2,8 +2,10 @@ applications:
 - name: bf-algo
   host: bf-algo
   command: ./bf-algo.bin
-  buildpack: https://github.com/venicegeo/binary-gdal-buildpack
+  buildpack: https://github.com/venicegeo/binary-ossim-buildpack
   domain: stage.geointservices.io
   memory: 1G
   instances: 1
   timeout: 180
+  env:
+    PATH: /home/vcap/app/build/bin
