--- a/manifest.jenkins.yml
+++ b/manifest.jenkins.yml
@@ -8,4 +8,4 @@ applications:
   instances: 1
   timeout: 180
   env:
-    PATH: /home/vcap/app:/home/vcap/app/build/bin
+    PATH: /usr/bin:/home/vcap/app:/home/vcap/app/build/bin
