--- a/manifest.jenkins.yml
+++ b/manifest.jenkins.yml
@@ -8,4 +8,4 @@ applications:
   instances: 1
   timeout: 180
   env: 
-    PATH:/home/vap/app:build/bin:/build/lib
+    PATH: "/home/vap/app:build/bin:/build/lib"
