--- a/manifest.jenkins.yml
+++ b/manifest.jenkins.yml
@@ -8,4 +8,4 @@ applications:
   instances: 1
   timeout: 180
   env: 
-    PATH: "/usr/bin:/home/vcap/app:/home/vcap/app/build/bin:/home/vcap/app/build/lib"
+    PATH: "/bin:/usr/bin:/home/vcap/app:/home/vcap/app/build/bin:/home/vcap/app/build/lib"
