--- a/manifest.jenkins.yml
+++ b/manifest.jenkins.yml
@@ -11,4 +11,4 @@ applications:
     LD_LIBRARY_PATH: "/home/vcap/app/install/lib"
     OSSIM_INSTALL_PREFIX: "/home/vcap/app/install"
     OSSIM_PREFS_FILE: "$OSSIM_INSTALL_PREFIX/ossim.config"
-    PATH: "$PATH:$OSSIM_INSTALL_PREFIX/bin:$OSSIM_INSTALL_PREFIXlib"
+    PATH: "$PATH:$OSSIM_INSTALL_PREFIX/bin:$OSSIM_INSTALL_PREFIX/lib"
