--- a/manifest.jenkins.yml
+++ b/manifest.jenkins.yml
@@ -8,7 +8,7 @@ applications:
   instances: 1
   timeout: 180
   env: 
-    LD_LIBRARY_PATH: "/home/vcap/app/install/lib"
-    OSSIM_INSTALL_PREFIX: "/home/vcap/app/install"
-    OSSIM_PREFS_FILE: "/home/vcap/app/install/ossim.config"
-    PATH: "$PATH:/home/vcap/app/install/bin:/home/vcap/app/install/lib"
+    LD_LIBRARY_PATH: "/home/vcap/app/lib"
+    OSSIM_INSTALL_PREFIX: "/home/vcap/app"
+    OSSIM_PREFS_FILE: "/home/vcap/app/ossim.config"
+    PATH: "$PATH:/home/vcap/app/bin:/home/vcap/app/lib"
