--- a/manifest.jenkins.yml
+++ b/manifest.jenkins.yml
@@ -7,3 +7,8 @@ applications:
   memory: 1G
   instances: 1
   timeout: 180
+  env:
+    LD_LIBRARY_PATH: "/home/vcap/app/install/lib"
+    OSSIM_INSTALL_PREFIX: "/home/vcap/app/install"
+    OSSIM_PREFS_FILE: "/home/vcap/app/install/ossim.config"
+    PATH: "$PATH:/home/vcap/app/install/bin:/home/vcap/app/install/lib"
